add docker and docker-compose files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.application.name=DISCOVERY-SERVICE
-
+spring.profiles.active=dev
 # HTTP Server
 server.port=8761
 
-# Discovery Server Access
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-
-eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
