update prod properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=DISCOVERY-SERVICE
-spring.profiles.active=dev
+spring.profiles.active=prod
 # HTTP Server
 server.port=8761
 
