--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   package:
-    runs-on: [self-hosted, Linux, X64] 
+    runs-on: self-hosted
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -37,7 +37,7 @@ jobs:
 
   docker:
     needs: package
-    runs-on: [self-hosted, Linux, X64] 
+    runs-on: self-hosted
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
