--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,6 @@ jobs:
 
       - name: Build & Push Docker image
         run: |
-          IMAGE_NAME=${{ secrets.DOCKER_USERNAME }}/discovery
-          docker build -t $IMAGE_NAME:latest .
-          docker push $IMAGE_NAME:latest
+          IMAGE_NAME=${{ secrets.DOCKER_USERNAME }}/docker-microservices:discovery
+          docker build -t $IMAGE_NAME .
+          docker push $IMAGE_NAME
