--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -86,9 +86,9 @@ jobs:
           username: ${{ secrets.PROD_USER }}
           key: ${{ secrets.PROD_SSH_KEY }}
           port: ${{ secrets.PROD_PORT }}
-          env:
-            DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          script: |        
+          script: | 
+            DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
             docker pull ${{ secrets.DOCKER_USERNAME }}/docker-microservices:discovery
             docker-compose -f ~/devops-ci-cd-github-actions/docker-compose.yml down
             docker-compose -f ~/devops-ci-cd-github-actions/docker-compose.yml up -d
+
