--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,8 +28,11 @@ jobs:
       - name: Maven Package
         run: mvn clean package --no-transfer-progress
 
-      - name: Copy artifact locally
-        run: cp target/*.jar /tmp/discovery.jar
+      - name: Upload jar
+        uses: actions/upload-artifact@v3
+        with:
+          name: discovery-jar
+          path: target/*.jar
 
   docker:
     needs: package
@@ -44,8 +47,10 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Copy artifact from package job
-        run: cp /tmp/discovery.jar ./discovery.jar
+      - name: Download jar
+        uses: actions/download-artifact@v3
+        with:
+          name: discovery-jar
 
       - name: Build & Push Docker image
         run: |
