--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,11 +28,12 @@ jobs:
       - name: Maven Package
         run: mvn clean package --no-transfer-progress
 
-      - name: Upload jar
-        uses: actions/upload-artifact@v3
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
           name: discovery-jar
           path: target/*.jar
+
 
   docker:
     needs: package
@@ -47,15 +48,19 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Download jar
-        uses: actions/download-artifact@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
-          name: discovery-jar
+          name: built-jar
+          
+      - name: Verify JAR
+        run: ls -lh *.jar
 
       - name: Build & Push Docker image
         run: |
+          JAR_FILE=$(ls *.jar | head -n 1)
           IMAGE_NAME=${{ secrets.DOCKER_USERNAME }}/docker-microservices:discovery
-          docker build -t $IMAGE_NAME .
+          docker build --build-arg JAR_FILE=$JAR_FILE -t $IMAGE_NAME .
           docker push $IMAGE_NAME
 
   deploy:
