--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI CD Pipeline
 
 on:
   push:
@@ -28,43 +28,21 @@ jobs:
       - name: Maven Package
         run: mvn clean package --no-transfer-progress
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: discovery-jar
-          path: target/*.jar
-
-
-  docker:
-    needs: package
-    runs-on: self-hosted
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
       - name: Log in to Docker registry
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: discovery-jar
-          
-      - name: Verify JAR
-        run: ls -lh *.jar
-
       - name: Build & Push Docker image
         run: |
-          JAR_FILE=$(ls *.jar | head -n 1)
-          IMAGE_NAME=${{ secrets.DOCKER_USERNAME }}/docker-microservices:discovery
+          JAR_FILE=$(ls target/*.jar | head -n 1)
+          IMAGE_NAME=${{ secrets.DOCKER_USERNAME }}/discovery:latest
           docker build --build-arg JAR_FILE=$JAR_FILE -t $IMAGE_NAME .
           docker push $IMAGE_NAME
 
   deploy:
-    needs: docker  
+    needs: package  
     runs-on: self-hosted
     steps:
       - name: Checkout repository
@@ -100,6 +78,6 @@ jobs:
           port: ${{ secrets.PROD_PORT }}
           script: | 
             cd ~/docker-microservices/discovery
-            docker pull ${DOCKER_USERNAME}/docker-microservices:discovery
+            docker pull ${DOCKER_USERNAME}/discovery:latest
             docker-compose down
             docker-compose up -d
