--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 services:
     discovery: 
         image: "${DOCKER_USERNAME}/discovery:latest"
-        container_name: discovery
         ports:
             - "8761:8761"
-    networks:
-      - docker-ms
-    deploy:
-      replicas: 1
-      restart_policy:
-        condition: on-failure
+        networks:
+          docker-ms:
+            aliases:
+              - discovery
+        deploy:
+          replicas: 1
+          restart_policy:
+            condition: on-failure
 
 networks:
   docker-ms:
     external: true
-
