fix maven cache step

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,14 +16,14 @@ jobs:
         with:
           java-version: 17
           distribution: temurin
-
-      - name: Cache Maven packages
+            
+      - name: Cache Maven package
         uses: actions/cache@v3
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          key: ${{ runner.os }}-maven-${{ github.repository }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            ${{ runner.os }}-maven-
+            ${{ runner.os }}-maven-${{ github.repository }}-
 
       - name: Maven Package
         run: mvn clean package --no-transfer-progress
@@ -79,5 +79,6 @@ jobs:
           script: | 
             cd ~/docker-microservices/discovery
             docker stack deploy -c docker-compose.yml discovery
+
 
 
