Added support for environment variables in Docker deployment.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -79,6 +79,9 @@ jobs:
           script: | 
             cd ~/docker-microservices/discovery
             docker stack deploy -c docker-compose.yml discovery
+            docker stack deploy --env-file ~/docker-microservices/discovery/.env -c docker-compose.yml discovery
+
+
 
 
 
