Refactor CI/CD workflow for Maven caching

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,14 +17,14 @@ jobs:
           java-version: 17
           distribution: temurin
             
-      - name: Cache Maven packages for Discovery Service
+      - name: Cache Maven packages
         uses: actions/cache@v3
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ github.repository }}-discovery-service
+          key: ${{ runner.os }}-maven-${{ github.repository }}-${{ github.ref_name }}
           restore-keys: |
-            ${{ runner.os }}-maven-${{ github.repository }}-discovery-service-
-      
+            ${{ runner.os }}-maven-${{ github.repository }}-
+
       - name: Maven Package
         run: mvn clean package --no-transfer-progress
 
@@ -79,6 +79,7 @@ jobs:
             cd ~/docker-microservices/discovery
             sed -i "s|\${DOCKER_USERNAME}|${{ secrets.DOCKER_USERNAME }}|g" docker-compose.yml
             docker stack deploy -c docker-compose.yml discovery
+
 
 
 
