--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ github.repository }}-${{ github.ref_name }}
+          key: ${{ runner.os }}-maven-${{ github.repository }}
           restore-keys: |
             ${{ runner.os }}-maven-${{ github.repository }}-
 
@@ -79,9 +79,3 @@ jobs:
             cd ~/docker-microservices/discovery
             sed -i "s|\${DOCKER_USERNAME}|${{ secrets.DOCKER_USERNAME }}|g" docker-compose.yml
             docker stack deploy -c docker-compose.yml discovery
-
-
-
-
-
-
