--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -78,4 +78,7 @@ jobs:
           script: | 
             cd ~/docker-microservices/discovery
             sed -i "s|\${DOCKER_USERNAME}|${{ secrets.DOCKER_USERNAME }}|g" docker-compose.yml
-            docker stack deploy -c docker-compose.yml discovery
+            docker pull ${{ secrets.DOCKER_USERNAME }}/discovery:latest
+            docker stack deploy --with-registry-auth -c docker-compose.yml discovery
+
+
